package Entites;

import static Partie.De.lancerDe;

public class Entite {
    //private Position m_position;
    //private Action m_action;
    private Statistiques m_statistiques;

    public void perdrePv(int pvRetire) {
        //retire des pv a l'entité subissant une attaque
        this.m_statistiques.retirerPv(pvRetire);
        String phrase =this.getNom() + " perd " + pvRetire + " PV. PV restants : " + this.m_statistiques.getPv();
        //affichage
        est_mort();
    }
    public boolean est_mort(){
        //verifie si l'entite qui vient d'etre attaquer a toujours des points de vie restant
        if(this.m_statistiques.getPv()<=0){
            String phrase=this.getNom() +  "est mort";
            //Affichage
            //Sortir l'entite de la liste
            return true;
        }
        return false;
    }
    public void Passer_Le_Tour(){
        //Lorsque l'entite veut mettre fin a son tour elle peut utiliser dormir
        String phrase="je suis fatiguée... je vais me reposer...";
    }

    public void Deplacement() {
        // Sauvegarde des positions initiales pour les restaurer en cas d'annulation

        int deplacementsRestants = this.m_statistiques.getVitesse() / 3;

        String phrase="Entrez une direction (z = haut, q = gauche, s = bas, d = droite) :";
        java.util.Scanner scanner = new java.util.Scanner(System.in);

        // Boucle permettant les déplacements
        for (int i = 0; i < deplacementsRestants; i++) {
            System.out.print("Déplacement " + (i + 1) + "/" + deplacementsRestants + " : ");
            char direction = scanner.next().charAt(0);

            switch (direction) {
                case 'z':
                    positionY--;
                case 's':
                    positionY++;
                case 'q':
                    positionX--;
                case 'd':
                    positionX++;
                default:
                    System.out.println("Direction invalide ! Entrez z, q, s ou d uniquement.");
                    i--; // Annule cette itération, car le déplacement n'a pas eu lieu
            }
            System.out.println("Nouvelle position : (" + positionX + ", " + positionY + ")");
        }

        //changer cette partie quand on aura fais les liste de monstre et d'obstacle
        if (positionX < 0 || positionY < 0) {
            // Si la position finale est invalide, annuler tous les déplacements
            System.out.println("Position finale invalide! Revenir à la position de départ.");

            // Retourner à la position de départ
            positionX = positionInitialeX;
            positionY = positionInitialeY;
            System.out.println("Tous vos déplacements ont été annulés. Essayez une autre approche!");
        }
    }

    public void attaquer(Entite cible) {
        //verifier si la cible est l'assaillant ou plus ou moins d'une case de distance ,
        // si cest 1 case ou moins on ajoute la force au resultat du lancer , si c'est plus c'est la dexterite
        int degattotaux=0;
        String[] decomposeDe = getDegat().split("d"); // ["3", "4"]
        int nombreLancers = Integer.parseInt(decomposeDe[0]);
        int typeDe = Integer.parseInt(decomposeDe[1]);
        degattotaux=lancerDe(typeDe,nombreLancers);
        if ((cible.positionX - positionX == 1 || cible.positionX-positionX== -1) && (cible.positionY - positionY == 1 || cible.positionY-positionY == -1)) {
            if (cible.getarmure() < (lancerDe(20,1)+ status.getForce())){
                cible.perdrePv(degattotaux);
            }
        }
        else if(cible.getarmure()<(lancerDe(20,1)+ status.getDexterite())) {

            cible.perdrePv(degattotaux);
        }
        else{
            System.out.println("la cible résiste a l'attaque");
        }
    }


    public String getNom() {
        return "";
    }
    public int getarmure(){
        return 0;
    }
    public String getDegat() {
        return "";
    }
}
